concord_macros/tests/trybuild/fail/codegen_contract/reserved_bytes_arity_zero.rs
use concord_macros::api;

api! {
    client ReservedBytesArityZeroApi { base "https://example.com" }

    GET Download
        path ["download"]
        -> Bytes<>
}

fn main() {}
