concord_macros/tests/trybuild/fail/codegen_contract/reserved_bytes_arity_zero.stderr
error: reserved endpoint I/O family `Bytes` does not take type arguments
 --> tests/trybuild/fail/codegen_contract/reserved_bytes_arity_zero.rs:8:12
  |
8 |         -> Bytes<>
  |            ^^^^^^^
